--- a/apk/res/values-es/strings.xml
+++ b/apk/res/values-es/strings.xml
@@ -200,8 +200,8 @@
     <string name="activity_intensity_lowercase_label" msgid="4260366013498161858">"intensidad de la actividad"</string>
     <string name="activity_intensity_read_content_description" msgid="5503681098610026279">"Leer intensidad de la actividad"</string>
     <string name="activity_intensity_write_content_description" msgid="4843212785611055496">"Escribir intensidad de la actividad"</string>
-    <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Tasa metabólica basal"</string>
-    <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"tasa metabólica basal"</string>
+    <string name="basal_metabolic_rate_uppercase_label" msgid="4802351493928086473">"Metabolismo basal"</string>
+    <string name="basal_metabolic_rate_lowercase_label" msgid="7195596626083893231">"metabolismo basal"</string>
     <string name="basal_metabolic_rate_read_content_description" msgid="5583222212705234907">"Leer tasa metabólica basal"</string>
     <string name="basal_metabolic_rate_write_content_description" msgid="4246137679868953443">"Escribir tasa metabólica basal"</string>
     <string name="body_fat_uppercase_label" msgid="4618860235119416449">"Grasa corporal"</string>
@@ -426,7 +426,7 @@
     <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"Ninguna de tus aplicaciones podrá acceder ni añadir nuevos datos a Salud conectada. No se eliminarán los datos ya almacenados.\n\nEsta acción no afecta a otros permisos que pueda tener esta aplicación, como los de ubicación, cámara o micrófono."</string>
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Quitar todos"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"Gestionar aplicación"</string>
-    <string name="see_app_data" msgid="3951030076195119476">"Ver datos de aplicaciones"</string>
+    <string name="see_app_data" msgid="3951030076195119476">"Ver datos de la aplicación"</string>
     <string name="remove_access_for_this_app" msgid="7701101420310711833">"Quitar acceso a esta aplicación"</string>
     <string name="delete_app_data" msgid="6890357774873859952">"Eliminar datos de la aplicación"</string>
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"Aplicaciones inactivas"</string>
@@ -1102,7 +1102,7 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Añadir una aplicación"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Editar fuentes de la aplicación"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Predeterminado por el dispositivo"</string>
-    <string name="app_data_title" msgid="6499967982291000837">"Datos de aplicaciones"</string>
+    <string name="app_data_title" msgid="6499967982291000837">"Datos de la aplicación"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Los datos de <xliff:g id="APP_NAME">%1$s</xliff:g> se mostrarán aquí"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Los datos de las aplicaciones con acceso a Salud conectada se mostrarán aquí"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Día"</string>
