--- a/apk/res/values-b+sr+Latn/strings.xml
+++ b/apk/res/values-b+sr+Latn/strings.xml
@@ -82,7 +82,7 @@
     <string name="can_read" msgid="4568261079308309564">"Može da čita podatke tipa: <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
     <string name="can_write" msgid="5082414937218423823">"Može da upisuje podatke tipa: <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
     <string name="inactive_apps" msgid="8956546286760797760">"Neaktivne aplikacije"</string>
-    <string name="inactive_apps_message" msgid="8335803540719022910">"Ove aplikacije više ne mogu da čitaju ni da upisuju podatke tipa <xliff:g id="DATA_TYPE">%s</xliff:g>, ali još imate podatke u Povezivanju zdravlja."</string>
+    <string name="inactive_apps_message" msgid="8335803540719022910">"Ove aplikacije više ne mogu da čitaju ni da upisuju podatke tipa <xliff:g id="DATA_TYPE">%s</xliff:g>, ali još uvek imaju podatke u Povezivanju zdravlja."</string>
     <string name="data_access_empty_message" msgid="9084350402254264452">"Aplikacije više ne mogu da čitaju ni upisuju podatke tipa <xliff:g id="DATA_TYPE_0">%1$s</xliff:g>, a nikakvi podaci <xliff:g id="DATA_TYPE_2">%2$s</xliff:g> nisu sačuvani u Povezivanju zdravlja"</string>
     <string name="data_access_exercise_description" msgid="6868583522699443570">"Ovi podaci obuhvataju informacije poput vremena aktivnosti, tipa vežbanja, krugova, ponavljanja, sesija ili zaveslaja"</string>
     <string name="data_access_sleep_description" msgid="74293126050011153">"Ovi podaci obuhvataju informacije poput faza sna i sesija spavanja"</string>
@@ -145,8 +145,8 @@
     <string name="background_read_description" msgid="3203594555849969283">"Dozvolite ovoj aplikaciji da pristupa podacima Povezivanja zdravlja kada je ne koristite"</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"Utrošene aktivne kalorije"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"utrošene aktivne kalorije"</string>
-    <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"Čitanje utrošenih aktivnih kalorija"</string>
-    <string name="active_calories_burned_write_content_description" msgid="8794383690157452892">"Pisanje utrošenih aktivnih kalorija"</string>
+    <string name="active_calories_burned_read_content_description" msgid="6449442660408754186">"Čitanje potrošenih aktivnih kalorija"</string>
+    <string name="active_calories_burned_write_content_description" msgid="8794383690157452892">"Pisanje potrošenih aktivnih kalorija"</string>
     <string name="exercise_uppercase_label" msgid="9174662895529523172">"Vežbanje"</string>
     <string name="exercise_lowercase_label" msgid="7210988327804427943">"vežbanje"</string>
     <string name="exercise_read_content_description" msgid="2079728018078185556">"Čitanje podataka o vežbanju"</string>
@@ -184,8 +184,8 @@
     <string name="steps_lowercase_label" msgid="706153549312838582">"koraci"</string>
     <string name="steps_read_content_description" msgid="7839297670092769964">"Čitanje podataka o koracima"</string>
     <string name="steps_write_content_description" msgid="6360223825799711659">"Upisivanje podataka o koracima"</string>
-    <string name="total_calories_burned_uppercase_label" msgid="2749855864302679314">"Ukupno utrošenih kalorija"</string>
-    <string name="total_calories_burned_lowercase_label" msgid="3185370725975873922">"ukupno utrošenih kalorija"</string>
+    <string name="total_calories_burned_uppercase_label" msgid="2749855864302679314">"Ukupno potrošenih kalorija"</string>
+    <string name="total_calories_burned_lowercase_label" msgid="3185370725975873922">"ukupno potrošenih kalorija"</string>
     <string name="total_calories_burned_read_content_description" msgid="1569722345910293531">"Čitanje podataka o ukupno utrošenim kalorijama"</string>
     <string name="total_calories_burned_write_content_description" msgid="2727752180681851608">"Upisivanje podataka o ukupno utrošenim kalorijama"</string>
     <string name="vo2_max_uppercase_label" msgid="6614391499711390476">"Maksimalna potrošnja kiseonika"</string>
@@ -431,7 +431,7 @@
     <string name="delete_app_data" msgid="6890357774873859952">"Izbriši podatke aplikacija"</string>
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"Neaktivne aplikacije"</string>
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Ove aplikacije više nemaju pristup, ali i dalje imaju sačuvane podatke u Povezivanju zdravlja"</string>
-    <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> može da čita podatke dodate posle <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
+    <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> može da čita podatke dodate posle: <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Da biste upravljali drugim dozvolama za Android kojima ova aplikacija može da pristupa, idite u Podešavanja &gt; Aplikacije"</string>
     <string name="manage_permissions_rationale" msgid="2780008055185441703">"U politici privatnosti programera možete da saznate kako <xliff:g id="APP_NAME">%1$s</xliff:g> upravlja vašim podacima"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Da biste upravljali drugim dozvolama za Android kojima ova aplikacija može da pristupa, idite u Podešavanja, pa dodirnite Aplikacije"</string>
