--- a/apk/res/values-fa/strings.xml
+++ b/apk/res/values-fa/strings.xml
@@ -82,7 +82,7 @@
     <string name="can_read" msgid="4568261079308309564">"می‌تواند داده‌های <xliff:g id="PERMISSION_TYPE">%s</xliff:g> را بخواند"</string>
     <string name="can_write" msgid="5082414937218423823">"می‌تواند داده‌های <xliff:g id="PERMISSION_TYPE">%s</xliff:g> را بنویسد"</string>
     <string name="inactive_apps" msgid="8956546286760797760">"برنامه‌های غیرفعال"</string>
-    <string name="inactive_apps_message" msgid="8335803540719022910">"این برنامه‌ها دیگر نمی‌توانند داده <xliff:g id="DATA_TYPE">%s</xliff:g> را بخوانند یا بنویسند، اما همچنان داده ذخیره‌شده‌ای در Health Connect دارند"</string>
+    <string name="inactive_apps_message" msgid="8335803540719022910">"این برنامه‌ها دیگر نمی‌توانند داده‌های <xliff:g id="DATA_TYPE">%s</xliff:g> را بخوانند یا بنویسند، اما همچنان داده‌ها را در Health Connect ذخیره می‌کنند"</string>
     <string name="data_access_empty_message" msgid="9084350402254264452">"برنامه‌ها دیگر نمی‌توانند <xliff:g id="DATA_TYPE_0">%1$s</xliff:g> را بخوانند یا بنویسند و هیچ داده <xliff:g id="DATA_TYPE_2">%2$s</xliff:g> در Health Connect ذخیره نشده است"</string>
     <string name="data_access_exercise_description" msgid="6868583522699443570">"این داده‌ها شامل اطلاعاتی مثل زمان فعالیت، نوع تمرین، دورها، تکرارها، جلسه‌ها، یا حرکت‌های شنا می‌شود"</string>
     <string name="data_access_sleep_description" msgid="74293126050011153">"این داده‌ها شامل اطلاعاتی مثل مراحل خواب و جلسات خواب می‌شود"</string>
