--- a/apk/res/values-iw/strings.xml
+++ b/apk/res/values-iw/strings.xml
@@ -82,7 +82,7 @@
     <string name="can_read" msgid="4568261079308309564">"יכולת לקרוא נתונים מסוג <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
     <string name="can_write" msgid="5082414937218423823">"יכולת לשמור נתונים מסוג <xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
     <string name="inactive_apps" msgid="8956546286760797760">"אפליקציות לא פעילות"</string>
-    <string name="inactive_apps_message" msgid="8335803540719022910">"האפליקציות האלה כבר לא יכולות לקרוא או לכתוב נתונים מסוג <xliff:g id="DATA_TYPE">%s</xliff:g>, אבל הנתונים שלהן עדיין מאוחסנים ב-Health Connect"</string>
+    <string name="inactive_apps_message" msgid="8335803540719022910">"האפליקציות האלה כבר לא יכולות לקרוא או לשמור נתונים מסוג <xliff:g id="DATA_TYPE">%s</xliff:g>, אבל הנתונים שלהן עדיין מאוחסנים ב-Health Connect"</string>
     <string name="data_access_empty_message" msgid="9084350402254264452">"אפליקציות כבר לא יוכלו לקרוא או לכתוב נתונים מסוג <xliff:g id="DATA_TYPE_0">%1$s</xliff:g> ואין נתונים מסוג <xliff:g id="DATA_TYPE_2">%2$s</xliff:g> שמאוחסנים ב-Health Connect"</string>
     <string name="data_access_exercise_description" msgid="6868583522699443570">"הנתונים האלה כוללים מידע כמו משך הפעילות, סוג האימון, הקפות, חזרות, סשנים או חתירות בשחייה"</string>
     <string name="data_access_sleep_description" msgid="74293126050011153">"הנתונים האלה כוללים מידע כמו שלבי השינה וסשנים של שינה"</string>
@@ -432,7 +432,7 @@
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"אפליקציות לא פעילות"</string>
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"לאפליקציות האלה כבר אין גישה, אבל עדיין יש להן נתונים מאוחסנים ב-Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> יכולה לקרוא נתונים שנוספו אחרי <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>"</string>
-    <string name="other_android_permissions" msgid="8051485761573324702">"כדי לנהל הרשאות Android אחרות שיש לאפליקציה הזו גישה אליהן, עוברים אל \'הגדרות\' &gt; \'אפליקציות\'"</string>
+    <string name="other_android_permissions" msgid="8051485761573324702">"כדי לנהל הרשאות Android אחרות שיש לאפליקציה הזו גישה אליהן, צריך לעבור אל \'הגדרות\' &gt; \'אפליקציות\'"</string>
     <string name="manage_permissions_rationale" msgid="2780008055185441703">"במדיניות הפרטיות של המפתח מוסבר איך האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> מטפלת בנתונים שלך"</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"כדי לנהל הרשאות Android אחרות שיש לאפליקציה הזו גישה אליהן, עוברים ל\'הגדרות\' ומקישים על \'אפליקציות\'"</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"לעיון במדיניות הפרטיות"</string>
@@ -581,7 +581,7 @@
     <string name="confirming_question_permission_type_app_data_one_day" msgid="4377296923865256246">"למחוק לתמיד נתוני <xliff:g id="DATA_TYPE">%1$s</xliff:g> שנוספו על ידי <xliff:g id="APP_DATA">%2$s</xliff:g> מ-24 השעות האחרונות?"</string>
     <string name="confirming_question_permission_type_app_data_one_week" msgid="2253468260502709170">"למחוק לתמיד נתוני <xliff:g id="DATA_TYPE">%1$s</xliff:g> שנוספו על ידי <xliff:g id="APP_DATA">%2$s</xliff:g> מ-7 הימים האחרונים?"</string>
     <string name="confirming_question_permission_type_app_data_one_month" msgid="1656927839079630144">"למחוק לתמיד נתוני <xliff:g id="DATA_TYPE">%1$s</xliff:g> שנוספו על ידי <xliff:g id="APP_DATA">%2$s</xliff:g> מ-30 הימים האחרונים?"</string>
-    <string name="confirming_question_app_remove_all_permissions" msgid="4170343072352701421">"צריך להסיר גם את כל ההרשאות של <xliff:g id="APP_WITH_PERMISSIONS">%s</xliff:g> מ-Health Connect"</string>
+    <string name="confirming_question_app_remove_all_permissions" msgid="4170343072352701421">"בנוסף, להסיר גם את ההרשאות של <xliff:g id="APP_WITH_PERMISSIONS">%s</xliff:g> מ-Health Connect"</string>
     <string name="confirming_question_data_type_from_app_all" msgid="8361163993548510509">"למחוק לתמיד את כל הנתונים מסוג <xliff:g id="DATA_TYPE">%1$s</xliff:g> שנוספו על ידי <xliff:g id="APP_DATA">%2$s</xliff:g>?"</string>
     <string name="confirming_question_single_entry" msgid="2064578008447638932">"למחוק את הרשומה הזו לתמיד מ-Health Connect?"</string>
     <string name="confirming_question_message" msgid="2934249835529079545">"האפליקציות המקושרות כבר לא יוכלו לגשת לנתונים האלה מ-Health Connect"</string>
@@ -1137,24 +1137,24 @@
     <string name="a11y_previous_day" msgid="2529677154858456085">"ליום הקודם"</string>
     <string name="a11y_previous_week" msgid="2992971531628685405">"לשבוע הקודם"</string>
     <string name="a11y_previous_month" msgid="3304373968190750755">"לחודש הקודם"</string>
-    <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"למחוק סופית את כל הנתונים?"</string>
+    <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"למחוק את כל הנתונים לתמיד?"</string>
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"למחוק סופית את הנתונים שנבחרו?"</string>
-    <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"למחוק סופית את כל הנתונים של <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"למחוק לתמיד את כל הנתונים של <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
     <string name="some_app_data_selected_deletion_confirmation_dialog" msgid="5378172524112070270">"למחוק סופית את נתוני <xliff:g id="APP_NAME">%s</xliff:g> שנבחרו?"</string>
     <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"למחוק סופית את כל הרשומות מ-<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
-    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"למחוק סופית את כל הרשומות מהשבוע של <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
+    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"למחוק לתמיד את כל הרשומות מהשבוע של <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
     <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"למחוק סופית את כל הרשומות מחודש <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
-    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"למחוק סופית את הרשומות שנבחרו מ-<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
-    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"למחוק סופית את הרשומות שנבחרו מהשבוע של <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
-    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"למחוק סופית את הרשומות שנבחרו לחודש <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
-    <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"למחוק סופית את הרשומה הזו?"</string>
+    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"למחוק לתמיד את הרשומות שנבחרו מ-<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
+    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"למחוק לתמיד את הרשומות שנבחרו מהשבוע של <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
+    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"למחוק לתמיד את הרשומות שנבחרו לחודש <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
+    <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"למחוק את הרשומה הזו לתמיד?"</string>
     <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"למחוק סופית את כל הרשומות של <xliff:g id="APP_NAME">%1$s</xliff:g> מ-<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"למחוק סופית את כל הרשומות של <xliff:g id="APP_NAME">%1$s</xliff:g> מהשבוע של <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="all_app_entries_selected_month_deletion_confirmation_dialog" msgid="3240581815583269052">"למחוק סופית את כל הרשומות של <xliff:g id="APP_NAME">%1$s</xliff:g> מחודש <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_day_deletion_confirmation_dialog" msgid="1030347169774815676">"למחוק סופית את רשומות <xliff:g id="APP_NAME">%1$s</xliff:g> שנבחרו מ-<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
-    <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"למחוק סופית את רשומות <xliff:g id="APP_NAME">%1$s</xliff:g> שנבחרו מהשבוע של <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
-    <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"למחוק סופית את רשומות <xliff:g id="APP_NAME">%1$s</xliff:g> שנבחרו מחודש <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
-    <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"למחוק סופית את הרשומה הזו של <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
+    <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"למחוק לתמיד את רשומות <xliff:g id="APP_NAME">%1$s</xliff:g> שנבחרו מהשבוע של <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
+    <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"למחוק לתמיד את רשומות <xliff:g id="APP_NAME">%1$s</xliff:g> שנבחרו מחודש <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
+    <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"למחוק לתמיד את הרשומה הזו של <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"למחוק לתמיד את הנתונים מסוג <xliff:g id="DATA_TYPE">%1$s</xliff:g> של <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
     <string name="on" msgid="8266542510798355807">"מופעל"</string>
     <string name="off" msgid="6996623844428550649">"כבוי"</string>
