--- a/apk/res/values-ko/strings.xml
+++ b/apk/res/values-ko/strings.xml
@@ -244,7 +244,7 @@
     <string name="intermenstrual_bleeding_lowercase_label" msgid="5284781275147619132">"월경간출혈"</string>
     <string name="intermenstrual_bleeding_read_content_description" msgid="5970939335115119015">"월경간출혈 읽기"</string>
     <string name="intermenstrual_bleeding_write_content_description" msgid="1377719923165234099">"월경간출혈 쓰기"</string>
-    <string name="menstruation_uppercase_label" msgid="9119506748428874832">"월경"</string>
+    <string name="menstruation_uppercase_label" msgid="9119506748428874832">"생리"</string>
     <string name="menstruation_lowercase_label" msgid="8098816978006207242">"월경"</string>
     <string name="menstruation_read_content_description" msgid="7710047469771882021">"월경 읽기"</string>
     <string name="menstruation_write_content_description" msgid="5142669435897047396">"월경 쓰기"</string>
