--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -1112,7 +1112,7 @@
     <string name="last_week_header" msgid="5194448963146719382">"Өнгөрсөн долоо хоног"</string>
     <string name="this_month_header" msgid="2452395268894677189">"Энэ сар"</string>
     <string name="last_month_header" msgid="1359164797239191253">"Өнгөрсөн сар"</string>
-    <string name="tab_entries" msgid="3402700951602029493">"Оролт"</string>
+    <string name="tab_entries" msgid="3402700951602029493">"Оруулга"</string>
     <string name="tab_access" msgid="7818197975407243701">"Хандалт"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Health Connect-г ашиглаж эхлэх"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"Хооронд нь эрүүл мэнд, фитнесийн өгөгдөл хуваалцах эхний аппуудаа синк хийнэ үү"</string>
