--- a/apk/res/values-mr/strings.xml
+++ b/apk/res/values-mr/strings.xml
@@ -37,7 +37,7 @@
     <string name="connected_apps_button_no_permissions_subtitle" msgid="1651994862419752908">"काहीही नाही"</string>
     <string name="entry_details_title" msgid="590184849040247850">"एंट्रीचे तपशील"</string>
     <string name="browse_data_title" msgid="5232691805953326097">"डेटा ब्राउझ करा"</string>
-    <string name="browse_data_subtitle" msgid="7025164374898103993">"डेटा आणि कोणती अ‍ॅप्स तो अ‍ॅक्सेस करू शकतात ते पाहा"</string>
+    <string name="browse_data_subtitle" msgid="7025164374898103993">"डेटा आणि कोणती अ‍ॅप्स तो अ‍ॅक्सेस करू शकतात ते पहा"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"ऑटो-डिलीट, डेटा स्रोत, बॅकअप आणि रिस्टोअर करणे"</string>
     <string name="backup_title" msgid="211503191266235085">"बॅकअप"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"डेटा स्रोत आणि प्राधान्य"</string>
