--- a/apk/res/values-ms/strings.xml
+++ b/apk/res/values-ms/strings.xml
@@ -583,7 +583,7 @@
     <string name="confirming_question_permission_type_app_data_one_month" msgid="1656927839079630144">"Padamkan data <xliff:g id="DATA_TYPE">%1$s</xliff:g> yang ditambahkan oleh <xliff:g id="APP_DATA">%2$s</xliff:g> daripada tempoh 30 hari yang lalu secara kekal?"</string>
     <string name="confirming_question_app_remove_all_permissions" msgid="4170343072352701421">"Alih keluar juga semua kebenaran <xliff:g id="APP_WITH_PERMISSIONS">%s</xliff:g> daripada Health Connect"</string>
     <string name="confirming_question_data_type_from_app_all" msgid="8361163993548510509">"Padamkan semua data <xliff:g id="DATA_TYPE">%1$s</xliff:g> yang ditambah oleh <xliff:g id="APP_DATA">%2$s</xliff:g>?"</string>
-    <string name="confirming_question_single_entry" msgid="2064578008447638932">"Padamkan entri ini daripada Health Connect secara kekal?"</string>
+    <string name="confirming_question_single_entry" msgid="2064578008447638932">"Padamkan masukan ini daripada Health Connect secara kekal?"</string>
     <string name="confirming_question_message" msgid="2934249835529079545">"Apl yang disambungkan tidak akan boleh mengakses data ini lagi daripada Health Connect"</string>
     <string name="confirming_question_message_menstruation" msgid="944931041343695373">"Tindakan ini akan memadamkan semua masukan haid dari <xliff:g id="START_DATE">%1$s</xliff:g> hingga <xliff:g id="END_DATE">%2$s</xliff:g>."</string>
     <string name="confirming_question_delete_button" msgid="1999996759507959985">"Padam"</string>
@@ -1112,7 +1112,7 @@
     <string name="last_week_header" msgid="5194448963146719382">"Minggu lalu"</string>
     <string name="this_month_header" msgid="2452395268894677189">"Bulan ini"</string>
     <string name="last_month_header" msgid="1359164797239191253">"Bulan lepas"</string>
-    <string name="tab_entries" msgid="3402700951602029493">"Entri"</string>
+    <string name="tab_entries" msgid="3402700951602029493">"Masukan"</string>
     <string name="tab_access" msgid="7818197975407243701">"Akses"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Mula menggunakan Health Connect"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"Segerakkan apl pertama anda untuk berkongsi data kesihatan dan kecergasan antara apl tersebut"</string>
@@ -1144,10 +1144,10 @@
     <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"Padamkan semua entri untuk <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> secara kekal?"</string>
     <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"Padamkan semua entri untuk minggu <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> secara kekal?"</string>
     <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"Padamkan semua entri untuk <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> secara kekal?"</string>
-    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"Padamkan entri yang dipilih untuk <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> secara kekal?"</string>
-    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"Padamkan entri yang dipilih untuk minggu <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> secara kekal?"</string>
-    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"Padamkan entri yang dipilih untuk <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> secara kekal?"</string>
-    <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"Padamkan entri ini secara kekal?"</string>
+    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"Padamkan masukan yang dipilih untuk <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> secara kekal?"</string>
+    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"Padamkan masukan yang dipilih untuk minggu <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> secara kekal?"</string>
+    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"Padamkan masukan yang dipilih untuk <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> secara kekal?"</string>
+    <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"Padamkan masukan ini secara kekal?"</string>
     <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"Padamkan semua entri <xliff:g id="APP_NAME">%1$s</xliff:g> untuk <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> secara kekal?"</string>
     <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"Padamkan semua entri <xliff:g id="APP_NAME">%1$s</xliff:g> untuk minggu <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> secara kekal?"</string>
     <string name="all_app_entries_selected_month_deletion_confirmation_dialog" msgid="3240581815583269052">"Padamkan semua entri <xliff:g id="APP_NAME">%1$s</xliff:g> untuk <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> secara kekal?"</string>
