--- a/apk/res/values-ne/strings.xml
+++ b/apk/res/values-ne/strings.xml
@@ -21,7 +21,7 @@
     <string name="health_connect_summary" msgid="6401520186678972547">"एपलाई स्वास्थ्यसम्बन्धी जानकारी प्रयोग गर्न दिने कि नदिने भन्ने कुरा व्यवस्थापन गर्नुहोस्"</string>
     <string name="permissions_and_data_header" msgid="4406105506837487805">"अनुमति तथा डेटा"</string>
     <string name="home_subtitle" msgid="2154213430054477787">"आफ्नो डिभाइसमा भएका स्वास्थ्य र तन्दुरुस्तीसम्बन्धी जानकारी व्यवस्थापन गर्नुहोस् र ती जानकारी कुन कुन एपलाई प्रयोग गर्न दिने भन्ने कुरा नियन्त्रण गर्नुहोस्"</string>
-    <string name="data_title" msgid="4456619761533380816">"डेटा र अनुमति"</string>
+    <string name="data_title" msgid="4456619761533380816">"डेटा र एक्सेस"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"स्वास्थ्य अभिलेखहरू ब्राउज गर्नुहोस्"</string>
     <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"आफ्ना स्वास्थ्य अभिलेख र ती स्वास्थ्य अभिलेख एक्सेस गर्न सक्ने एपहरू हेर्नुहोस्"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"सबै कोटीहरू"</string>
@@ -1013,7 +1013,7 @@
     <string name="search_keywords_permissions" msgid="7821010295153350533">"अनुमतिहरू"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, स्वास्थ्यसम्बन्धी डेटा, स्वास्थ्यका कोटी, डेटा प्रयोग गर्ने अनुमति, गतिविधि, शारीरिक नाप, महिनावारीको रेकर्ड राख्ने सुविधा, पोषण, निद्रा, स्वास्थ्यसम्बन्धी आधारभूत विवरण"</string>
     <string name="search_breadcrumbs_permissions" msgid="2667471090347475796">"Health Connect तथा एपलाई दिइएका अनुमति"</string>
-    <string name="search_breadcrumbs_data" msgid="6635428480372024040">"Health Connect तथा डेटा र अनुमति"</string>
+    <string name="search_breadcrumbs_data" msgid="6635428480372024040">"Health Connect तथा डेटा र एक्सेस"</string>
     <string name="search_connected_apps" msgid="8180770761876928851">"एपहरू खोज्नुहोस्"</string>
     <string name="no_results" msgid="4007426147286897998">"कुनै पनि परिणाम भेटिएन"</string>
     <string name="help" msgid="6028777453152686162">"मद्दत"</string>
