--- a/apk/res/values-nl/strings.xml
+++ b/apk/res/values-nl/strings.xml
@@ -38,7 +38,7 @@
     <string name="entry_details_title" msgid="590184849040247850">"Invoerdetails"</string>
     <string name="browse_data_title" msgid="5232691805953326097">"Door gegevens browsen"</string>
     <string name="browse_data_subtitle" msgid="7025164374898103993">"Bekijk gegevens en welke apps er toegang toe hebben"</string>
-    <string name="manage_data_summary" msgid="8537870912521944449">"Automatisch verwijderen, gegevensbronnen, back-up en herstel"</string>
+    <string name="manage_data_summary" msgid="8537870912521944449">"Verwijder gegevens automatisch, gegevensbronnen, back-up en herstel"</string>
     <string name="backup_title" msgid="211503191266235085">"Back-up"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"Gegevensbronnen en prioriteit"</string>
     <string name="set_units_title" msgid="2657822539603758029">"Eenheden instellen"</string>
@@ -433,7 +433,7 @@
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Deze apps hebben geen toegang meer, maar hebben nog wel opgeslagen gegevens in Health Connect"</string>
     <string name="manage_permissions_time_frame" msgid="1299483940842401923">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan gegevens lezen die zijn toegevoegd na <xliff:g id="DATA_ACCESS_DATE">%2$s</xliff:g>."</string>
     <string name="other_android_permissions" msgid="8051485761573324702">"Ga naar Instellingen &gt; Apps om andere Android-rechten te geven aan deze app."</string>
-    <string name="manage_permissions_rationale" msgid="2780008055185441703">"In het privacybeleid van de ontwikkelaar kun je nagaan hoe <xliff:g id="APP_NAME">%1$s</xliff:g> je gegevens verwerkt"</string>
+    <string name="manage_permissions_rationale" msgid="2780008055185441703">"In het privacybeleid van de ontwikkelaar kun je nagaan hoe <xliff:g id="APP_NAME">%1$s</xliff:g> je gegevens verwerkt."</string>
     <string name="other_android_permissions_content_description" msgid="2261431010048933820">"Ga naar Instellingen en tik op Apps om andere Android-rechten te geven aan deze app."</string>
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Privacybeleid lezen"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Geopend in de afgelopen 24 uur"</string>
@@ -1141,20 +1141,20 @@
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"De geselecteerde gegevens definitief verwijderen?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"Alle <xliff:g id="APP_NAME">%s</xliff:g>-gegevens definitief verwijderen?"</string>
     <string name="some_app_data_selected_deletion_confirmation_dialog" msgid="5378172524112070270">"De geselecteerde <xliff:g id="APP_NAME">%s</xliff:g>-gegevens definitief verwijderen?"</string>
-    <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"Alle vermeldingen voor <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
-    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"Alle vermeldingen voor de week van <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
-    <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"Alle vermeldingen voor <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
-    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"De geselecteerde vermeldingen voor <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
-    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"De geselecteerde vermeldingen voor de week van <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
-    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"De geselecteerde vermeldingen voor <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
-    <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"Deze vermelding definitief verwijderen?"</string>
+    <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"Alle items voor <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
+    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"Alle items voor de week van <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
+    <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"Alle items voor <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
+    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"De geselecteerde items voor <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
+    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"De geselecteerde items voor de week van <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
+    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"De geselecteerde items voor <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> definitief verwijderen?"</string>
+    <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"Dit item definitief verwijderen?"</string>
     <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"Alle <xliff:g id="APP_NAME">%1$s</xliff:g>-vermeldingen voor <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> definitief verwijderen?"</string>
     <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"Alle <xliff:g id="APP_NAME">%1$s</xliff:g>-vermeldingen voor de week van <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> definitief verwijderen?"</string>
     <string name="all_app_entries_selected_month_deletion_confirmation_dialog" msgid="3240581815583269052">"Alle <xliff:g id="APP_NAME">%1$s</xliff:g>-vermeldingen voor <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> definitief verwijderen?"</string>
     <string name="some_app_entries_selected_day_deletion_confirmation_dialog" msgid="1030347169774815676">"De geselecteerde <xliff:g id="APP_NAME">%1$s</xliff:g>-vermeldingen voor <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> definitief verwijderen?"</string>
-    <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"De geselecteerde <xliff:g id="APP_NAME">%1$s</xliff:g>-vermeldingen voor de week van <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> definitief verwijderen?"</string>
-    <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"De geselecteerde <xliff:g id="APP_NAME">%1$s</xliff:g>-vermeldingen voor <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> definitief verwijderen?"</string>
-    <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Deze <xliff:g id="APP_NAME">%s</xliff:g>-vermelding definitief verwijderen?"</string>
+    <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"De geselecteerde <xliff:g id="APP_NAME">%1$s</xliff:g>-items voor de week van <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> definitief verwijderen?"</string>
+    <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"De geselecteerde <xliff:g id="APP_NAME">%1$s</xliff:g>-items voor <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> definitief verwijderen?"</string>
+    <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Dit <xliff:g id="APP_NAME">%s</xliff:g>-item definitief verwijderen?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Gegevens van het type <xliff:g id="DATA_TYPE">%1$s</xliff:g> voor <xliff:g id="APP_NAME">%2$s</xliff:g> definitief verwijderen?"</string>
     <string name="on" msgid="8266542510798355807">"Aan"</string>
     <string name="off" msgid="6996623844428550649">"Uit"</string>
