--- a/apk/res/values-or/strings.xml
+++ b/apk/res/values-or/strings.xml
@@ -27,7 +27,7 @@
     <string name="all_categories_title" msgid="1446410643217937926">"ସମସ୍ତ ବର୍ଗ"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"ସମସ୍ତ ବର୍ଗ ଦେଖନ୍ତୁ"</string>
     <string name="no_data" msgid="1906986019249068659">"କୌଣସି ଡାଟା ନାହିଁ"</string>
-    <string name="connected_apps_title" msgid="279942692804743223">"ଆପ ଅନୁମତିଗୁଡ଼ିକ"</string>
+    <string name="connected_apps_title" msgid="279942692804743223">"ଆପ ଅନୁମତି"</string>
     <string name="connected_apps_subtitle" msgid="8464462995533399175">"ଆପଣଙ୍କ ଆପ୍ସ ଏବଂ ଅନୁମତିଗୁଡ଼ିକୁ ପରିଚାଳନା କରନ୍ତୁ"</string>
     <string name="only_one_connected_app_button_subtitle" msgid="1429452274331178121">"<xliff:g id="NUM_POSSIBLE_APPS">%2$s</xliff:g>ଟିରୁ <xliff:g id="NUM_APPS_CONNECTED">%1$s</xliff:g>ଟି ଆପର ଆକ୍ସେସ୍ ଅଛି"</string>
     <string name="connected_apps_button_subtitle" msgid="8855528937028500370">"<xliff:g id="NUM_POSSIBLE_APPS">%2$s</xliff:g>ଟିରୁ <xliff:g id="NUM_APPS_CONNECTED">%1$s</xliff:g>ଟି ଆପ୍ସର ଆକ୍ସେସ ଅଛି"</string>
@@ -1112,7 +1112,7 @@
     <string name="last_week_header" msgid="5194448963146719382">"ଗତ ସପ୍ତାହ"</string>
     <string name="this_month_header" msgid="2452395268894677189">"ଏହି ମାସ"</string>
     <string name="last_month_header" msgid="1359164797239191253">"ଗତ ମାସ"</string>
-    <string name="tab_entries" msgid="3402700951602029493">"ଏଣ୍ଟ୍ରିଗୁଡ଼ିକ"</string>
+    <string name="tab_entries" msgid="3402700951602029493">"ଏଣ୍ଟ୍ରି"</string>
     <string name="tab_access" msgid="7818197975407243701">"ଆକ୍ସେସ କରନ୍ତୁ"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Health Connect ବ୍ୟବହାର କରିବା ଆରମ୍ଭ କରନ୍ତୁ"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"ଏଗୁଡ଼ିକ ମଧ୍ୟରେ ସ୍ୱାସ୍ଥ୍ୟ ଏବଂ ଫିଟନେସ ଡାଟା ସେୟାର କରିବା ପାଇଁ ଆପଣଙ୍କ ପ୍ରଥମ ଆପ୍ସକୁ ସିଙ୍କ କରନ୍ତୁ"</string>
