--- a/apk/res/values-zh-rCN/strings.xml
+++ b/apk/res/values-zh-rCN/strings.xml
@@ -37,7 +37,7 @@
     <string name="connected_apps_button_no_permissions_subtitle" msgid="1651994862419752908">"无"</string>
     <string name="entry_details_title" msgid="590184849040247850">"详细数据"</string>
     <string name="browse_data_title" msgid="5232691805953326097">"浏览数据"</string>
-    <string name="browse_data_subtitle" msgid="7025164374898103993">"查看数据，并了解可以访问这些数据的应用"</string>
+    <string name="browse_data_subtitle" msgid="7025164374898103993">"查看数据及可以访问这些数据的应用"</string>
     <string name="manage_data_summary" msgid="8537870912521944449">"自动删除、数据源、备份和恢复"</string>
     <string name="backup_title" msgid="211503191266235085">"备份"</string>
     <string name="data_sources_and_priority_title" msgid="2360222350913604558">"数据源和优先级"</string>
@@ -82,7 +82,7 @@
     <string name="can_read" msgid="4568261079308309564">"可以读取<xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
     <string name="can_write" msgid="5082414937218423823">"可以写入<xliff:g id="PERMISSION_TYPE">%s</xliff:g>"</string>
     <string name="inactive_apps" msgid="8956546286760797760">"非活跃应用"</string>
-    <string name="inactive_apps_message" msgid="8335803540719022910">"这些应用无法继续读取或写入<xliff:g id="DATA_TYPE">%s</xliff:g>数据，但仍有数据存储在健康数据共享中"</string>
+    <string name="inactive_apps_message" msgid="8335803540719022910">"这些应用无法继续读取或写入<xliff:g id="DATA_TYPE">%s</xliff:g>数据，但仍有数据存储在“健康数据共享”中"</string>
     <string name="data_access_empty_message" msgid="9084350402254264452">"应用无法再读取或写入<xliff:g id="DATA_TYPE_0">%1$s</xliff:g>数据，并且健康数据共享中没有存储任何<xliff:g id="DATA_TYPE_2">%2$s</xliff:g>数据"</string>
     <string name="data_access_exercise_description" msgid="6868583522699443570">"此数据包含运动时间、锻炼类型、趟数、重复次数、时段或游泳动作等信息"</string>
     <string name="data_access_sleep_description" msgid="74293126050011153">"此数据包含睡眠阶段和睡眠时段等信息"</string>
@@ -581,7 +581,7 @@
     <string name="confirming_question_permission_type_app_data_one_day" msgid="4377296923865256246">"要永久删除“<xliff:g id="APP_DATA">%2$s</xliff:g>”过去 24 小时添加的<xliff:g id="DATA_TYPE">%1$s</xliff:g>数据吗？"</string>
     <string name="confirming_question_permission_type_app_data_one_week" msgid="2253468260502709170">"要永久删除“<xliff:g id="APP_DATA">%2$s</xliff:g>”过去 7 天添加的<xliff:g id="DATA_TYPE">%1$s</xliff:g>数据吗？"</string>
     <string name="confirming_question_permission_type_app_data_one_month" msgid="1656927839079630144">"要永久删除“<xliff:g id="APP_DATA">%2$s</xliff:g>”过去 30 天添加的<xliff:g id="DATA_TYPE">%1$s</xliff:g>数据吗？"</string>
-    <string name="confirming_question_app_remove_all_permissions" msgid="4170343072352701421">"同时从“健康数据共享”中移除全部“<xliff:g id="APP_WITH_PERMISSIONS">%s</xliff:g>”权限"</string>
+    <string name="confirming_question_app_remove_all_permissions" msgid="4170343072352701421">"同时从“健康数据共享”中移除“<xliff:g id="APP_WITH_PERMISSIONS">%s</xliff:g>”的所有权限"</string>
     <string name="confirming_question_data_type_from_app_all" msgid="8361163993548510509">"要永久删除<xliff:g id="APP_DATA">%2$s</xliff:g>添加的所有<xliff:g id="DATA_TYPE">%1$s</xliff:g>数据吗？"</string>
     <string name="confirming_question_single_entry" msgid="2064578008447638932">"要从“健康数据共享”中永久删除此条目吗？"</string>
     <string name="confirming_question_message" msgid="2934249835529079545">"关联的应用将不再能够从“健康数据共享”中访问这些数据"</string>
@@ -1146,14 +1146,14 @@
     <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所有条目吗？"</string>
     <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所选条目吗？"</string>
     <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>这一周的所选条目吗？"</string>
-    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所选条目吗？"</string>
+    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>的所选条目吗？"</string>
     <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"要永久删除此条目吗？"</string>
     <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所有“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
     <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>这一周的所有“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
     <string name="all_app_entries_selected_month_deletion_confirmation_dialog" msgid="3240581815583269052">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所有“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
     <string name="some_app_entries_selected_day_deletion_confirmation_dialog" msgid="1030347169774815676">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>这一周的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
-    <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
+    <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"要永久删除<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"要永久删除此“<xliff:g id="APP_NAME">%s</xliff:g>”条目吗？"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"要永久删除“<xliff:g id="APP_NAME">%2$s</xliff:g>”的<xliff:g id="DATA_TYPE">%1$s</xliff:g>数据吗？"</string>
     <string name="on" msgid="8266542510798355807">"开"</string>
